Edits for the other window I forgor about